<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ros2.android.tango.MainActivity">

    <!-- for 1.1 org.rajawali3d.view.SurfaceView -->
    <org.rajawali3d.surface.RajawaliSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_z" />

            <TextView
                android:id="@+id/average_z_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_count" />

            <TextView
                android:id="@+id/point_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/first_person_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/third_person_button"
        android:layout_alignLeft="@+id/third_person_button"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:paddingRight="5dp"
        android:text="@string/first_person"
        android:onClick="onFirstPersonClicked"/>

    <Button
        android:id="@+id/top_down_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:paddingRight="5dp"
        android:text="@string/top_down"
        android:onClick="onTopDownClicked"/>

    <Button
        android:id="@+id/third_person_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/top_down_button"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:paddingRight="5dp"
        android:text="@string/third_person"
        android:onClick="onThirdPersonClicked"/>

</RelativeLayout>
